--- a/MEMOO/Podfile
+++ b/MEMOO/Podfile
@@ -10,4 +10,7 @@ target 'MEMOO' do
 pod 'Google-Mobile-Ads-SDK'
 #pod 'Google-Mobile-Ads-SDK', '~> 7.42.2'
 #pod 'Google-Mobile-Ads-SDK', '~> 7.64.0'
+
+pod 'SwiftyJSON'
+
 end
