--- a/MEMOO/MEMOO/Info.plist
+++ b/MEMOO/MEMOO/Info.plist
@@ -24,7 +24,9 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Shadow-Regular</string>
+		<string>Shadow_regular.ttf</string>
+		<string>RF-Krabuler-Regular.otf</string>
+		<string>Gill Sans Ultra Bold Condensed.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
