--- a/MEMOO/MEMOO/Info.plist
+++ b/MEMOO/MEMOO/Info.plist
@@ -28,7 +28,7 @@
 		<string>RF-Krabuler-Regular.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>Main</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
